[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Characters/Movement.gd" type="Script" id=1]
[ext_resource path="res://raw_assets/sounds/footsteps/mud.wav" type="AudioStream" id=2]
[ext_resource path="res://raw_assets/sounds/footsteps/stone.wav" type="AudioStream" id=3]
[ext_resource path="res://raw_assets/sounds/footsteps/broken_tile.wav" type="AudioStream" id=4]

[node name="Movement" type="Spatial"]
script = ExtResource( 1 )

[node name="GroundRayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -999, 0 )

[node name="step_stone" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.992

[node name="step_transition" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.118

[node name="step_mud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -11.361
